After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 635761 - [PATCH] Possible pointer truncation crash (and fix)
[PATCH] Possible pointer truncation crash (and fix)
Status: RESOLVED FIXED
Product: gnome-keyring
Classification: Core
Component: general
git master
Other All
: Normal major
: ---
Assigned To: GNOME keyring maintainer(s)
GNOME keyring maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2010-11-25 09:05 UTC by Jasper Lievisse Adriaanse
Modified: 2010-12-06 11:53 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix implicit declaration of strchr(). (267 bytes, patch)
2010-11-25 09:05 UTC, Jasper Lievisse Adriaanse
none Details | Review

Description Jasper Lievisse Adriaanse 2010-11-25 09:05:30 UTC
Created attachment 175227 [details] [review]
Fix implicit declaration of strchr().

daemon/control/gkd-control-server.c doesn't include string.h, which holds the prototype for strchr(). Since GCC can't find the prototype, it assumes the return type is (int), while it's actually (char *).

The attached patch just adds the missing #include line.
Comment 1 Stef Walter 2010-12-06 11:53:44 UTC
Thanks. Committed your fix.

commit d9a669d217de1dcece6fbef7ebb8e49125d51a4d
Author: Jasper Lievisse Adriaanse <jasper@humppa.nl>
Date:   Mon Dec 6 11:52:18 2010 +0000

    [daemon] Fix pointer truncation by including header.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=635761