[daemon] Fix pointer truncation by including header.

https://bugzilla.gnome.org/show_bug.cgi?id=635761