daemon/control/gkd-control-server.c
@@ -36,6 +36,7 @@
 
 #include <errno.h>
 #include <fcntl.h>
+#include <string.h>
 
 #include <sys/socket.h>
 #include <sys/types.h>
